force-app/main/default/objects/TPM_Initial_Data_Load__mdt/TPM_Initial_Data_Load__mdt.object-meta.xml
<CustomObject>
    <description>Custom Metadata for initial Loads</description>
    <label>TPM Initial Data Load</label>
    <pluralLabel>TPM Initial Data Load</pluralLabel>
</CustomObject>