force-app/main/default/objects/TPM_Initial_Data_Load__mdt/fields/TPM_Available_Product_Level__c.field-meta.xml
<CustomField>
    <fullName>TPM_Available_Product_Level__c</fullName>
    <description>Available Product level for Customer Template</description>
    <label>Available Product Level</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>