force-app/main/default/objects/TPM_Initial_Data_Load__mdt/fields/TPM_Configuration__c.field-meta.xml
<CustomField>
    <fullName>TPM_Configuration__c</fullName>
    <label>Configuration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>