force-app/main/default/objects/TPM_Initial_Data_Load__mdt/fields/TPM_Customer_Template_Planning_Mode__c.field-meta.xml
<CustomField>
    <fullName>TPM_Customer_Template_Planning_Mode__c</fullName>
    <description>Customer template planning mode</description>
    <label>Customer Template Planning Mode</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>