force-app/main/default/objects/TPM_Initial_Data_Load__mdt/fields/TPM_Friday__c.field-meta.xml
<CustomField>
    <fullName>TPM_Friday__c</fullName>
    <description>Friday Value</description>
    <label>Friday</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>