force-app/main/default/objects/TPM_Initial_Data_Load__mdt/fields/TPM_Initial_Roles__c.field-meta.xml
<CustomField>
    <fullName>TPM_Initial_Roles__c</fullName>
    <description>Initial Roles for customer Template</description>
    <label>Initial Roles</label>
    <type>TextArea</type>
</CustomField>