force-app/main/default/objects/TPM_Initial_Data_Load__mdt/fields/TPM_Monday__c.field-meta.xml
<CustomField>
    <fullName>TPM_Monday__c</fullName>
    <description>Monday Value for Weekday profile</description>
    <label>Monday</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>