force-app/main/default/objects/TPM_Initial_Data_Load__mdt/fields/TPM_Name__c.field-meta.xml
<CustomField>
    <fullName>TPM_Name__c</fullName>
    <label>Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>