force-app/main/default/objects/TPM_Initial_Data_Load__mdt/fields/TPM_No_of_years__c.field-meta.xml
<CustomField>
    <fullName>TPM_No_of_years__c</fullName>
    <description>No of years for creating buisness year</description>
    <label>No of years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>