force-app/main/default/objects/TPM_Initial_Data_Load__mdt/fields/TPM_ObjectName__c.field-meta.xml
<CustomField>
    <fullName>TPM_ObjectName__c</fullName>
    <description>Object Name</description>
    <label>Object Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>cgcloud__Business_Year__c</fullName>
                <default>true</default>
                <label>cgcloud__Business_Year__c</label>
            </value>
            <value>
                <fullName>cgcloud__Account_Template__c</fullName>
            </value>
            <value>
                <fullName>cgcloud__Metadata_Wizard_Configuration__c</fullName>
            </value>
            <value>
                <fullName>cgcloud__Week_Day_Share_Profile__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>