force-app/main/default/objects/TPM_Initial_Data_Load__mdt/fields/TPM_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>TPM_Sales_Org__c</fullName>
    <label>Sales Org</label>
    <length>100</length>
    <type>Text</type>
</CustomField>