force-app/main/default/objects/TPM_Initial_Data_Load__mdt/fields/TPM_Saturday__c.field-meta.xml
<CustomField>
    <fullName>TPM_Saturday__c</fullName>
    <description>Saturday Value</description>
    <label>Saturday</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>