force-app/main/default/objects/TPM_Initial_Data_Load__mdt/fields/TPM_Start_Year__c.field-meta.xml
<CustomField>
    <fullName>TPM_Start_Year__c</fullName>
    <description>Business start year</description>
    <label>Start Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>