force-app/main/default/objects/TPM_Initial_Data_Load__mdt/fields/TPM_Sunday__c.field-meta.xml
<CustomField>
    <fullName>TPM_Sunday__c</fullName>
    <description>Sunday Value</description>
    <label>Sunday</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>