force-app/main/default/objects/TPM_Initial_Data_Load__mdt/fields/TPM_Thursday__c.field-meta.xml
<CustomField>
    <fullName>TPM_Thursday__c</fullName>
    <description>Thursday Value</description>
    <label>Thursday</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>