force-app/main/default/objects/TPM_Initial_Data_Load__mdt/fields/TPM_Tuesday__c.field-meta.xml
<CustomField>
    <fullName>TPM_Tuesday__c</fullName>
    <description>Tuesday Value</description>
    <label>Tuesday</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>