force-app/main/default/objects/TPM_Initial_Data_Load__mdt/fields/TPM_Wednesday__c.field-meta.xml
<CustomField>
    <fullName>TPM_Wednesday__c</fullName>
    <description>Wednesday Value</description>
    <label>Wednesday</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>